--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "v1",
+	"name": "v2",
 	"private": true,
 	"version": "0.0.1",
 	"type": "module",
@@ -16,6 +16,7 @@
 		"@eslint/js": "^9.18.0",
 		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/adapter-static": "^3.0.10",
+		"@sveltejs/adapter-vercel": "^5.4.0",
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"eslint": "^9.18.0",
