--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/adapter-vercel": "^5.4.0",
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
+		"@types/uuid": "^10.0.0",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
@@ -28,5 +29,8 @@
 		"svelte": "^5.0.0",
 		"vite": "^7.0.4",
 		"vitest": "^3.2.4"
+	},
+	"dependencies": {
+		"uuid": "^10.0.0"
 	}
 }
